# haskellCourse

./: .ghci  .gitignore  README.md  automata.hs  automaton.hs  expressions.hs  helloWorld.hs  homeworks.md  index.hs  regex.hs  run_test.bat  textAlign.hs
mpi/: CMakeLists.txt  main.cpp
open-mp/: CMakeLists.txt  open-mp.sln
open-mp/open-mp/: Array2DMatrix.h  ArrayMatrix.h  BasicMatrix.h  MatrixMultiplicator.h  MatrixUtils.cpp  MatrixUtils.h  Stopwatch.cpp  Stopwatch.h  Vector2DMatrix.h  VectorMatrix.h  main.cpp  open-mp  open-mp.cpp  open-mp.vcxproj  open-mp.vcxproj.filters  pch.h
open-mp/open-mp/results/: benchmark.txt
open-mp/results/: Array2DMatrix.txt  ArrayMatNoOpenMp.txt  ArrayMatrix.txt  Vector2DMatrix.txt  VectorMatrix.txt  table_results.xlsx
open-mp/tex/: doc.tex
open-mp/tex/code/: ArrMat.h  BasicMatrix.h  forex.cpp  forex2.cpp
src/: automaton.hs  cfgExamples.hs  fib.hs  grammar.hs  grammarTypes.hs  grammarUtils.hs  helloHaskellList.hs  regex.hs  stack.hs
test/: .ghci  automaton_test.hs  regex_test.hs
